<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- Navigation bar -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#dddddd"
        android:layout_marginBottom="10dp">

        <Button
            android:id="@+id/button_MainMenu"
            android:layout_width="wrap_content"
            android:layout_height="63dp"
            android:layout_marginLeft="15dp"
            android:text="@string/main_menu" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/marketplace">
        </TextView>
    </RelativeLayout>

    <!-- TabLayout -->
    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/rare"
        app:tabIndicatorColor="?attr/colorAccent"
        app:tabSelectedTextColor="?attr/colorAccent"
        app:tabTextColor="?android:attr/textColorSecondary">

        <com.google.android.material.tabs.TabItem
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/cards" />

        <com.google.android.material.tabs.TabItem
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/packs" />

        <com.google.android.material.tabs.TabItem
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/bundles" />
    </com.google.android.material.tabs.TabLayout>

    <!-- DeckBuilder & Inventory container -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="10dp"
        android:layout_marginEnd="5dp"
        android:background="#dddddd"
        android:baselineAligned="false"
        android:id="@+id/marketplace_fragment_container">


    </FrameLayout>
</LinearLayout>
