<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/woodgrain_backdrop">

    <ImageView
        android:id="@+id/imageView21"
        android:layout_width="1264dp"
        android:layout_height="806dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/packstuff"
        android:src="@drawable/pack_placeholder" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp">

        <Button
            android:id="@+id/button_backToDeckBuilder"
            android:layout_width="wrap_content"
            android:layout_height="63dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="1169dp"
            android:text="@string/back" />

<!--        <Button-->
<!--            android:id="@+id/button_cardsOpened"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="63dp"-->
<!--            android:layout_below="@id/button_backToDeckBuilder"-->
<!--            android:layout_alignParentEnd="true"-->
<!--            android:layout_marginTop="-59dp"-->
<!--            android:layout_marginEnd="9dp"-->
<!--            android:text="@string/open"-->
<!--            tools:layout_editor_absoluteX="605dp"-->
<!--            tools:layout_editor_absoluteY="520dp" />-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <Button
                    android:id="@+id/buttonPack1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/open_pack_1" />

                <Button
                    android:id="@+id/buttonPack2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/open_pack_2"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"/>

                <Button
                    android:id="@+id/buttonPack3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/open_pack_3" />
            </LinearLayout>
        </LinearLayout>


    </RelativeLayout>

</RelativeLayout>
