<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:background="#dddddd">

        <Button
            android:id="@+id/button_openPack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="15dp"
            android:text="@string/open_packs" />
    </RelativeLayout>

    <!-- DeckBuilder & Inventory container -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginEnd="5dp"
        android:layout_weight="1"
        android:background="#dddddd"
        android:baselineAligned="false"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp">

        <!-- DeckBuilder Screen -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <!-- Header for DeckBuilder -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="#a23423"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/startDeckCreationButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:text="@string/create_new_deck"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/addToDeckButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="140dp"
                    android:text="@string/add_to_deck"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tvDeckBuilder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/deck_builder"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/removeCardFromDeckButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="140dp"
                    android:text="@string/remove_card"
                    android:textSize="12sp" />

                <Spinner
                    android:id="@+id/decksDropDown"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="15dp" />
            </RelativeLayout>

            <!-- Cards in deck -->
            <FrameLayout
                android:id="@+id/builderFragmentContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/black"
                android:orientation="vertical"
                android:padding="5dp">

            </FrameLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
