<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/woodgrain_backdrop"
    tools:context=".presentation.DeckBuilder">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- Dark Green Header with Text -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="vertical"
            android:background="@drawable/woodgrain_header"
            android:gravity="start">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/inventory"
                android:textColor="#000000"
                android:textSize="46sp"
                android:textStyle="bold|italic"
            />

        </LinearLayout>

        <!-- Add Button to the right -->
        <Button
            android:id="@+id/button_openPack"
            android:layout_width="wrap_content"
            android:layout_height="63dp"
            android:layout_gravity="end"
            android:text="@string/open_packs"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <TextView
                android:id="@+id/textview_header1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:text="@string/your_cards"
                android:textColor="#000000"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textview_header2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:text="@string/builder"
                android:textColor="#000000"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.673"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textview_first"
                android:layout_width="728dp"
                android:layout_height="603dp"
                android:layout_marginTop="90dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.575" />

            <TextView
                android:id="@+id/textview_second"
                android:layout_width="472dp"
                android:layout_height="603dp"
                android:layout_marginTop="90dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <GridView
                android:id="@+id/gridView"
                android:layout_width="719dp"
                android:layout_height="576dp"
                android:columnWidth="100dp"
                android:gravity="center"
                android:horizontalSpacing="8dp"
                android:numColumns="7"
                android:padding="16dp"
                android:verticalSpacing="8dp"
                tools:context=".presentation.DeckBuilder"
                tools:layout_editor_absoluteX="-2dp"
                tools:layout_editor_absoluteY="99dp" />

            <GridView
                android:id="@+id/gridView1"
                android:layout_width="481dp"
                android:layout_height="578dp"
                android:columnWidth="100dp"
                android:gravity="center"
                android:horizontalSpacing="8dp"
                android:numColumns="5"
                android:padding="16dp"
                android:verticalSpacing="8dp"
                tools:context=".presentation.DeckBuilder"
                tools:layout_editor_absoluteX="783dp"
                tools:layout_editor_absoluteY="98dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>



